@@ -143,6 +143,13 @@
 
 	<object class="GtkSourceBuffer" id="mw_code_buffer"/>
 
+	<object class="GtkAdjustment" id="mw_clock_speed_adjustment">
+		<property name="upper">1000</property>
+		<property name="lower">0.1</property>
+		<property name="step-increment">1</property>
+		<property name="value">1</property>
+	</object>
+
 	<object class="GtkAdjustment" id="mw_analogue_input_adjustment">
 		<property name="upper">5.00</property>
 		<property name="step-increment">0.10</property>
@@ -183,6 +190,102 @@
 						</child>
 						<child>
 							<object class="GtkVBox" id="vbox3">
+								<child>
+									<object class="GtkFrame" id="frame0">
+										<child type="label">
+											<object class="GtkLabel" id="label0">
+												<property name="label" translatable="yes">&lt;b&gt;General&lt;/b&gt;</property>
+												<property name="use-markup">True</property>
+											</object>
+										</child>
+										<child>
+											<object class="GtkTable" id="table0">
+												<property name="n-rows">3</property>
+												<property name="n-columns">3</property>
+												<child>
+													<object class="GtkLabel" id="label6">
+														<property name="label" translatable="yes">Program Counter</property>
+													</object>
+													<packing>
+														<property name="top-attach">0</property>
+														<property name="bottom-attach">1</property>
+														<property name="left-attach">0</property>
+														<property name="right-attach">1</property>
+													</packing>
+												</child>
+												<child>
+													<object class="GtkLabel" id="mw_program_counter_label">
+														<property name="label">00</property>
+													</object>
+													<packing>
+														<property name="top-attach">0</property>
+														<property name="bottom-attach">1</property>
+														<property name="left-attach">1</property>
+														<property name="right-attach">3</property>
+													</packing>
+												</child>
+												<child>
+													<object class="GtkLabel" id="label7">
+														<property name="label" translatable="yes">Stack Pointer</property>
+													</object>
+													<packing>
+														<property name="top-attach">1</property>
+														<property name="bottom-attach">2</property>
+														<property name="left-attach">0</property>
+														<property name="right-attach">1</property>
+													</packing>
+												</child>
+												<child>
+													<object class="GtkLabel" id="mw_stack_pointer_label">
+														<property name="label">00</property>
+													</object>
+													<packing>
+														<property name="top-attach">1</property>
+														<property name="bottom-attach">2</property>
+														<property name="left-attach">1</property>
+														<property name="right-attach">3</property>
+													</packing>
+												</child>
+												<child>
+													<object class="GtkLabel" id="label8">
+														<property name="label" translatable="yes">Clock Speed</property>
+													</object>
+													<packing>
+														<property name="top-attach">2</property>
+														<property name="bottom-attach">3</property>
+														<property name="left-attach">0</property>
+														<property name="right-attach">1</property>
+													</packing>
+												</child>
+												<child>
+													<object class="GtkSpinButton" id="mw_clock_speed_spin_button">
+														<property name="adjustment">mw_clock_speed_adjustment</property>
+														<property name="digits">1</property>
+														<property name="value">1</property>
+														<signal name="value-changed" handler="mw_clock_speed_spin_button_value_changed_cb"/>
+													</object>
+													<packing>
+														<property name="top-attach">2</property>
+														<property name="bottom-attach">3</property>
+														<property name="left-attach">1</property>
+														<property name="right-attach">2</property>
+													</packing>
+												</child>
+												<child>
+													<object class="GtkLabel" id="label9">
+														<property name="label" translatable="yes">Hz</property>
+													</object>
+													<packing>
+														<property name="top-attach">2</property>
+														<property name="bottom-attach">3</property>
+														<property name="left-attach">2</property>
+														<property name="right-attach">3</property>
+													</packing>
+												</child>
+											</object>
+										</child>
+									</object>
+								</child>
 								<child>
 									<object class="GtkFrame" id="frame1">
 										<child type="label">
@@ -326,6 +429,28 @@
 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
+00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
+00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
+00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00</property>
+											</object>
+										</child>
+									</object>
+									<packing>
+										<property name="expand">False</property>
+									</packing>
+								</child>
+								<child>
+									<object class="GtkFrame" id="frame4">
+										<child type="label">
+											<object class="GtkLabel" id="label10">
+												<property name="label" translatable="yes">&lt;b&gt;Stack&lt;/b&gt;</property>
+												<property name="use-markup">True</property>
+											</object>
+										</child>
+										<child>
+											<object class="GtkLabel" id="mw_stack_label">
+												<property name="selectable">True</property>
+												<property name="label">00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00</property>
